FormLang/parser.output
Terminals unused in grammar

    NUMBER_LITERAL


State 32 conflicts: 1 shift/reduce


Grammar

    0 $accept: form $end

    1 form: FORM IDENTIFIER '{' section_list '}'

    2 section_list: ε
    3             | section_list section

    4 section: section_header '{' field_list '}'
    5        | section_header error '}'

    6 section_header: SECTION IDENTIFIER

    7 field_list: ε
    8           | field_list field
    9           | field_list error ';'

   10 field: FIELD IDENTIFIER ':' field_type field_attribute ';'
   11      | FIELD ':' field_type field_attribute ';'
   12      | FIELD IDENTIFIER ':' field_attribute ';'
   13      | FIELD IDENTIFIER ':' field_type error ';'
   14      | FIELD IDENTIFIER ':' field_type field_attribute error

   15 field_type: TEXT
   16           | EMAIL
   17           | PASSWORD
   18           | NUMBER
   19           | IDENTIFIER

   20 field_attribute: REQUIRED
   21                | OPTIONAL
   22                | ε


Terminals, with rules where they appear

    $end (0) 0
    ':' (58) 10 11 12 13 14
    ';' (59) 9 10 11 12 13
    '{' (123) 1 4
    '}' (125) 1 4 5
    error (256) 5 9 13 14
    FORM (258) 1
    SECTION (259) 6
    FIELD (260) 10 11 12 13 14
    TEXT (261) 15
    EMAIL (262) 16
    PASSWORD (263) 17
    NUMBER (264) 18
    REQUIRED (265) 20
    OPTIONAL (266) 21
    IDENTIFIER <str> (267) 1 6 10 12 13 14 19
    NUMBER_LITERAL (268)


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    form <form> (19)
        on left: 1
        on right: 0
    section_list (20)
        on left: 2 3
        on right: 1 3
    section (21)
        on left: 4 5
        on right: 3
    section_header (22)
        on left: 6
        on right: 4 5
    field_list (23)
        on left: 7 8 9
        on right: 4 8 9
    field (24)
        on left: 10 11 12 13 14
        on right: 8
    field_type <field_type> (25)
        on left: 15 16 17 18 19
        on right: 10 11 13 14
    field_attribute <num> (26)
        on left: 20 21 22
        on right: 10 11 12 14


State 0

    0 $accept: • form $end

    FORM  shift, and go to state 1

    form  go to state 2


State 1

    1 form: FORM • IDENTIFIER '{' section_list '}'

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: form • $end

    $end  shift, and go to state 4


State 3

    1 form: FORM IDENTIFIER • '{' section_list '}'

    '{'  shift, and go to state 5


State 4

    0 $accept: form $end •

    $default  accept


State 5

    1 form: FORM IDENTIFIER '{' • section_list '}'

    $default  reduce using rule 2 (section_list)

    section_list  go to state 6


State 6

    1 form: FORM IDENTIFIER '{' section_list • '}'
    3 section_list: section_list • section

    SECTION  shift, and go to state 7
    '}'      shift, and go to state 8

    section         go to state 9
    section_header  go to state 10


State 7

    6 section_header: SECTION • IDENTIFIER

    IDENTIFIER  shift, and go to state 11


State 8

    1 form: FORM IDENTIFIER '{' section_list '}' •

    $default  reduce using rule 1 (form)


State 9

    3 section_list: section_list section •

    $default  reduce using rule 3 (section_list)


State 10

    4 section: section_header • '{' field_list '}'
    5        | section_header • error '}'

    error  shift, and go to state 12
    '{'    shift, and go to state 13


State 11

    6 section_header: SECTION IDENTIFIER •

    $default  reduce using rule 6 (section_header)


State 12

    5 section: section_header error • '}'

    '}'  shift, and go to state 14


State 13

    4 section: section_header '{' • field_list '}'

    $default  reduce using rule 7 (field_list)

    field_list  go to state 15


State 14

    5 section: section_header error '}' •

    $default  reduce using rule 5 (section)


State 15

    4 section: section_header '{' field_list • '}'
    8 field_list: field_list • field
    9           | field_list • error ';'

    error  shift, and go to state 16
    FIELD  shift, and go to state 17
    '}'    shift, and go to state 18

    field  go to state 19


State 16

    9 field_list: field_list error • ';'

    ';'  shift, and go to state 20


State 17

   10 field: FIELD • IDENTIFIER ':' field_type field_attribute ';'
   11      | FIELD • ':' field_type field_attribute ';'
   12      | FIELD • IDENTIFIER ':' field_attribute ';'
   13      | FIELD • IDENTIFIER ':' field_type error ';'
   14      | FIELD • IDENTIFIER ':' field_type field_attribute error

    IDENTIFIER  shift, and go to state 21
    ':'         shift, and go to state 22


State 18

    4 section: section_header '{' field_list '}' •

    $default  reduce using rule 4 (section)


State 19

    8 field_list: field_list field •

    $default  reduce using rule 8 (field_list)


State 20

    9 field_list: field_list error ';' •

    $default  reduce using rule 9 (field_list)


State 21

   10 field: FIELD IDENTIFIER • ':' field_type field_attribute ';'
   12      | FIELD IDENTIFIER • ':' field_attribute ';'
   13      | FIELD IDENTIFIER • ':' field_type error ';'
   14      | FIELD IDENTIFIER • ':' field_type field_attribute error

    ':'  shift, and go to state 23


State 22

   11 field: FIELD ':' • field_type field_attribute ';'

    TEXT        shift, and go to state 24
    EMAIL       shift, and go to state 25
    PASSWORD    shift, and go to state 26
    NUMBER      shift, and go to state 27
    IDENTIFIER  shift, and go to state 28

    field_type  go to state 29


State 23

   10 field: FIELD IDENTIFIER ':' • field_type field_attribute ';'
   12      | FIELD IDENTIFIER ':' • field_attribute ';'
   13      | FIELD IDENTIFIER ':' • field_type error ';'
   14      | FIELD IDENTIFIER ':' • field_type field_attribute error

    TEXT        shift, and go to state 24
    EMAIL       shift, and go to state 25
    PASSWORD    shift, and go to state 26
    NUMBER      shift, and go to state 27
    REQUIRED    shift, and go to state 30
    OPTIONAL    shift, and go to state 31
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 22 (field_attribute)

    field_type       go to state 32
    field_attribute  go to state 33


State 24

   15 field_type: TEXT •

    $default  reduce using rule 15 (field_type)


State 25

   16 field_type: EMAIL •

    $default  reduce using rule 16 (field_type)


State 26

   17 field_type: PASSWORD •

    $default  reduce using rule 17 (field_type)


State 27

   18 field_type: NUMBER •

    $default  reduce using rule 18 (field_type)


State 28

   19 field_type: IDENTIFIER •

    $default  reduce using rule 19 (field_type)


State 29

   11 field: FIELD ':' field_type • field_attribute ';'

    REQUIRED  shift, and go to state 30
    OPTIONAL  shift, and go to state 31

    $default  reduce using rule 22 (field_attribute)

    field_attribute  go to state 34


State 30

   20 field_attribute: REQUIRED •

    $default  reduce using rule 20 (field_attribute)


State 31

   21 field_attribute: OPTIONAL •

    $default  reduce using rule 21 (field_attribute)


State 32

   10 field: FIELD IDENTIFIER ':' field_type • field_attribute ';'
   13      | FIELD IDENTIFIER ':' field_type • error ';'
   14      | FIELD IDENTIFIER ':' field_type • field_attribute error

    error     shift, and go to state 35
    REQUIRED  shift, and go to state 30
    OPTIONAL  shift, and go to state 31

    error  [reduce using rule 22 (field_attribute)]
    ';'    reduce using rule 22 (field_attribute)

    field_attribute  go to state 36


State 33

   12 field: FIELD IDENTIFIER ':' field_attribute • ';'

    ';'  shift, and go to state 37


State 34

   11 field: FIELD ':' field_type field_attribute • ';'

    ';'  shift, and go to state 38


State 35

   13 field: FIELD IDENTIFIER ':' field_type error • ';'

    ';'  shift, and go to state 39


State 36

   10 field: FIELD IDENTIFIER ':' field_type field_attribute • ';'
   14      | FIELD IDENTIFIER ':' field_type field_attribute • error

    error  shift, and go to state 40
    ';'    shift, and go to state 41


State 37

   12 field: FIELD IDENTIFIER ':' field_attribute ';' •

    $default  reduce using rule 12 (field)


State 38

   11 field: FIELD ':' field_type field_attribute ';' •

    $default  reduce using rule 11 (field)


State 39

   13 field: FIELD IDENTIFIER ':' field_type error ';' •

    $default  reduce using rule 13 (field)


State 40

   14 field: FIELD IDENTIFIER ':' field_type field_attribute error •

    $default  reduce using rule 14 (field)


State 41

   10 field: FIELD IDENTIFIER ':' field_type field_attribute ';' •

    $default  reduce using rule 10 (field)
